JavaFX Helpers 1.8.0
* Java 16
* JavaFX 16
* Removed built-in style sheet